# Git_hub

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  azure-pipelines-ai-devops.yml  azure-pipelines-infra.yml  azure-pipelines.yml  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  create-org-repository.yml
ai-devops/: Dockerfile  README.md
ai-devops/prompts/: incident-summary.md
ai_devops_assistant/: __init__.py  analyzer.py  cli.py  models.py  rules.py
docs/: azure-devops-project-setup.md  day-one-checklist.md  enterprise-setup.md  git-cheatsheet.md  gitops-operations.md  organization-automation.md  repository-governance.md
gitops/: README.md
gitops/argocd/: project.yaml
gitops/argocd/applications/: dev.yaml  prod.yaml  staging.yaml
gitops/charts/gitops-calculator/: Chart.yaml  values.yaml
gitops/environments/dev/: values.yaml
gitops/environments/prod/: values.yaml
gitops/environments/staging/: values.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/environments/: dev.tfvars  prod.tfvars  (+1 more)
pipelines/: README.md
pipelines/examples/: java-service.yml  node-service.yml  python-service.yml
pipelines/templates/: enterprise-microservice.yml
scripts/: bootstrap-azure-devops.sh  update-gitops-tag.sh
src/: __init__.py  app.py  calculator.py
tests/: test_ai_devops_assistant.py  test_app.py  test_calculator.py
(+24 files in other folders)
